--- a/svc/hecate/src/common/components/chat-input/chat-input.module.scss
+++ b/svc/hecate/src/common/components/chat-input/chat-input.module.scss
@@ -40,6 +40,7 @@ $floating-color: rgba(100, 149, 237, 0.7);
   animation: moveGradient 10s ease infinite;
   border-radius: 10px;
   box-shadow: 0 0 8px rgba(100, 149, 237, 0.5), 0 0 20px rgba(100, 149, 237, 0.5);
+  width: calc(100% - 250px);
 }
 
 .chatInput {
@@ -90,11 +91,19 @@ $floating-color: rgba(100, 149, 237, 0.7);
 
 /* Responsive adjustments for mobile screens */
 @media (max-width: 768px) {
+  .chatInputContainer {
+    padding: 6px;
+    width: calc(100% - 100px);
+  }
   .chatInput {
-    padding: 8px;
+    padding: 6px;
+    font-size: 14px;
+    width: calc(100% - 100px);
+  }
+  .sendButton {
+    padding: 8px 12px;
     font-size: 14px;
   }
-
   .floatingMessage {
     bottom: 50px;
   }
@@ -103,7 +112,7 @@ $floating-color: rgba(100, 149, 237, 0.7);
 /* Additional considerations for landscape mode */
 @media (max-width: 768px) and (orientation: landscape) {
   .chatInputContainer {
-    padding: 8px;
+    width: calc(100% - 120px);
   }
 }
 
