--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -42,3 +42,37 @@
   // background-size: cover;
   // background-position: center;
 }
+
+.powerButton {
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+  position: fixed;
+  right: 2.5%;
+  bottom: 2.5%;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  transition: background-color 0.3s; /* Smooth transition on hover */
+  z-index: 35; /* Ensure it's above other content */
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
+@media screen and (max-width: 768px) and (orientation: portrait) {
+  .powerButton {
+    right: 0%;
+  }
+
+}
+
+@media screen and (max-width: 768px) and (orientation: landscape) {
+
+
+}
+
