--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -52,11 +52,10 @@
   bottom: 2.5%;
   padding: 10px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white;
+  // color: white;
   font-size: 24px;
   cursor: pointer;
-  transition: background-color 0.3s; /* Smooth transition on hover */
+  // transition: background-color 0.3s; /* Smooth transition on hover */
   z-index: 35; /* Ensure it's above other content */
 
   &:hover {
