--- a/svc/hecate/src/common/components/button-wrapper/button-wrapper.module.scss
+++ b/svc/hecate/src/common/components/button-wrapper/button-wrapper.module.scss
@@ -3,7 +3,7 @@
 .echoButton, .powerButton {
   position: relative;
   overflow: hidden;
-  background: linear-gradient(145deg, #0f0c29, #302b63, #24243e); /* Updated gradient */
+  background: linear-gradient(145deg, rgba(15, 12, 41, 0.8), rgba(48, 43, 99, 0.6), rgba(36, 36, 62, 0.4));
   border: 1px solid #5D54A4; /* Subtle border */
   border-radius: 8px; /* Less rounded corners for a modern look */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2), inset 0 -4px 2px rgba(255, 255, 255, 0.1);
@@ -42,22 +42,4 @@
   }
 }
 
-.powerButton {
-  right: 2.5%;
-  bottom: 2.5%;
-  padding: 15px; /* Unified padding */
-  border-radius: 50%; /* Circular shape */
-  background-color: #0f0c29; /* Darker, consistent background */
-  color: #E0E0E0;
-  font-size: 20px; /* Adjusted for balance */
-  z-index: 35;
-}
-
-/* Responsive adjustments */
-@media screen and (max-width: 768px) {
-  .echoButton, .powerButton {
-    padding: 10px 20px; /* Reduced padding */
-    font-size: 16px; /* Scaled font size */
-  }
-}
 
