--- a/svc/hecate/src/common/components/echo/echo.module.scss
+++ b/svc/hecate/src/common/components/echo/echo.module.scss
@@ -9,10 +9,10 @@ $base-font-size: 18px;
 /* Animation Keyframes */
 @keyframes flickerGlow {
   0%, 100% {
-    box-shadow: 0 0 8px rgba(100, 149, 237, 0.4), 0 0 20px rgba(100, 149, 237, 0.4);
+    box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
   }
   50% {
-    box-shadow: 0 0 10px rgba(100, 149, 237, 0.5), 0 0 25px rgba(100, 149, 237, 0.5);
+  box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
   }
 }
 
@@ -56,10 +56,10 @@ $base-font-size: 18px;
 }
 
 .mainScreenContent {
-  animation: flickerGlow 2s infinite ease-in-out, moveGradient 10s ease infinite, backgroundFade 6s ease infinite;
+  animation: backgroundFade 6s ease infinite, flickerGlow 2s infinite ease-in-out, moveGradient 10s ease infinite;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(48, 25, 52, 0.6), rgba(25, 25, 112, 0.4));
   border-radius: 10px;
-  box-shadow: 0 0 8px rgba(100, 149, 237, 0.3), 0 0 20px rgba(100, 149, 237, 0.3);
+  box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
   display: flex;
   flex-direction: row;
   padding: 20px;
@@ -75,7 +75,7 @@ $base-font-size: 18px;
   text-align: center;
   background: linear-gradient(to right, rgba(255, 194, 113, 0.25), rgba(25, 25, 112, 0.5));
   border-radius: 10px;
-  box-shadow: 0 0 8px rgba(100, 149, 237, 0.3), 0 0 20px rgba(100, 149, 237, 0.3);
+  box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
   color: #ffffff;
   width: 100%;
   overflow-y: auto;
