--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -52,12 +52,12 @@ $base-font-size: 18px;
   // background-image: url('../../assets/images/nexoliths_2.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_3.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_4.png'); // Adjust the path according to your project structure
-  background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nowhere_bridge.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/forrest.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/world_0.png'); // Adjust the path according to your project structure
-  // background-image: url('../../assets/images/darkmoon.png'); // Adjust the path according to your project structure
+  background-image: url('../../assets/images/darkmoon.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/crystal_conduit.png'); // Adjust the path according to your project structure
   background-position: center;
   background-size: cover;
