--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -57,8 +57,13 @@ $base-font-size: 18px;
   // background-image: url('../../assets/images/nowhere_bridge.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/forrest.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/world_0.png'); // Adjust the path according to your project structure
-  background-image: url('../../assets/images/darkmoon.png'); // Adjust the path according to your project structure
-  // background-image: url('../../assets/images/crystal_conduit.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/darkmoon.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/void_01.png'); // Adjust the path  /according to your project structure
+  // background-image: url('../../assets/images/purple_0.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/forrest_0.png'); // Adjust the path according to your project structure
+  background-image: url('../../assets/images/void_02.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/void_01.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/void_01.png'); // Adjust the path according to your project structure
   background-position: center;
   background-size: cover;
   height: 100vh;
