--- a/svc/hecate/src/common/components/echo/echo.module.scss
+++ b/svc/hecate/src/common/components/echo/echo.module.scss
@@ -6,13 +6,19 @@ $normal-font-weight: 400;
 $base-font-size-title: 24px;
 $base-font-size: 18px;
 
+/* Theme colors */
+$background-dark: #000000; /* Black */
+$background-light: #ff8c00; /* Orange */
+$accent-color: rgba(255, 165, 0, 0.5); /* Lighter Orange for effects */
+$text-color: #ffffff; /* White for text */
+
 /* Animation Keyframes */
 @keyframes flickerGlow {
   0%, 100% {
-    box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
+    box-shadow: 0 0 8px $accent-color, 0 0 20px $accent-color;
   }
   50% {
-  box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
+    box-shadow: 0 0 8px $accent-color, 0 0 20px $accent-color;
   }
 }
 
@@ -34,7 +40,7 @@ $base-font-size: 18px;
 
 @keyframes blinkCaret {
   from, to { border-color: transparent; }
-  50% { border-color: rgba(100, 149, 237, 0.5); }
+  50% { border-color: $accent-color; }
 }
 
 @keyframes backgroundFade {
@@ -42,7 +48,7 @@ $base-font-size: 18px;
   50% { opacity: 0.6; }
 }
 
-/* Base Echo Screen styles with darker blue theme */
+/* Base Echo Screen styles with black and orange theme */
 .parentContainer {
   width: 70%;
   position: fixed;
@@ -57,9 +63,9 @@ $base-font-size: 18px;
 
 .mainScreenContent {
   animation: backgroundFade 6s ease infinite, flickerGlow 2s infinite ease-in-out, moveGradient 10s ease infinite;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(48, 25, 52, 0.6), rgba(25, 25, 112, 0.4));
+  background: linear-gradient(to right, $background-dark, $background-light);
   border-radius: 10px;
-  box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
+  box-shadow: 0 0 8px $background-dark, 0 0 20px $background-light;
   display: flex;
   flex-direction: row;
   padding: 20px;
@@ -73,10 +79,10 @@ $base-font-size: 18px;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to right, rgba(255, 194, 113, 0.25), rgba(25, 25, 112, 0.5));
+  background: linear-gradient(to right, $background-light, $background-dark);
   border-radius: 10px;
-  box-shadow: 0 0 8px rgba(70, 70, 70, 0.3), 0 0 20px rgba(70, 70, 70, 0.3);
-  color: #ffffff;
+  box-shadow: 0 0 8px $background-dark, 0 0 20px $background-light;
+  color: $text-color;
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
@@ -86,7 +92,7 @@ $base-font-size: 18px;
 .echoTitle,
 .echoContent {
   animation: typing 3.5s steps(40, end), blinkCaret 0.75s step-end infinite;
-  border-right: 0.15em solid rgba(100, 149, 237, 0.5);
+  border-right: 0.15em solid $accent-color;
   display: inline-block;
   white-space: normal;
   word-wrap: break-word;
